# examples

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
demo-app/: README.md  check_env.py  pyproject.toml  test_import.py
demo-app/src/: main.py
demo-app/src/pages/: __error__.wire  attributes.wire  dx_demo.wire  forms_test.wire  index.wire  interactivity.wire  lifecycle_demo.wire  test.wire
demo-app/src/pages/basic/: counter.wire  home.wire  weather.wire
demo-app/src/pages/basic-spa/: main.wire
demo-app/src/pages/tests/: RefComponent.wire  await.wire  complex.wire  for.wire  if.wire  signals_test.wire  try.wire
demo-components/: pyproject.toml
demo-components/components/: Alert.wire  Badge.wire  Button.wire  Card.wire  test_inject.wire
demo-components/pages/: comp_test.wire  components.wire
demo-routing/: pyproject.toml
demo-routing/.pywire_build/: manifest.json
demo-routing/.pywire_build/pages/: __error__.py  __layout__.py  about.py  counter.py  index.py
demo-routing/.pywire_build/pages/users/: [uid].py  __layout__.py  index.py
demo-routing/src/pages/: __error__.wire  __layout__.wire  about.wire  counter.wire  index.wire
demo-routing/src/pages/users/: [id].wire  [uid].wire  __layout__.wire  index.wire
demo-security/: pyproject.toml
demo-security/scripts/: security_probe.py
demo-security/src/: main.py
demo-security/src/pages/: index.wire
scripts/: check  lint
