[project]
name = "demo-app"
authors = [
    { name="Reece Holmdahl", email="reecelikesramen@duck.com" },
]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pywire",
    "groq",
    "sqlalchemy",
    "lxml",
    "beautifulsoup4",
]

# This is not a distributable package, just for dependency management