[project]
name = "demo-app"
authors = [
    { name="Reece Holmdahl", email="reece@pywire.dev" },
]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pywire",
    "groq",
    "sqlalchemy",
    "lxml",
    "beautifulsoup4",
]

# This is not a distributable package, just for dependency management

# [tool.uv.sources]
# pywire = { workspace = true }