[project]
name = "demo-components"
authors = [
    { name="Reece Holmdahl", email="reecelikesramen@duck.com" },
]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pywire",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

# This is not a distributable package, just for dependency management