[project]
name = "demo-security"
authors = [
    { name = "PyWire Security Demo", email = "security@example.com" },
]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pywire",
    "httpx",
    "msgpack",
    "websockets",
]

# Not a distributable package, just for dependency management

